# ptg

./: CMakeLists.txt
example/: main.cpp
include/: ptg.h
src/: cpu_device.cpp  cpu_device.hpp  cpu_kernel.cpp  cpu_kernel.hpp  device.hpp  kernel.hpp  kernel_registry.hpp  model.cpp  model.hpp  output.cpp  output.hpp  ptg.cpp  render.cpp  render.hpp  texture.hpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/kernels/: raise.cpp  raise_kernel.cpp  raise_kernel.hpp  render_kernel.cpp  render_kernel.hpp
